# poetry_django

./: README.md
mysite/mysite/: settings.py
poetry_django/: pyproject.toml
poetry_django/tests/: test_poetry_django.py
