[tool.poetry]
name = "poetry_django"
version = "0.1.0"
description = ""
authors = ["Jefferson Kael Marloch <jefferson.marloch@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
Flask = "^2.0.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
